--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel ="stylesheet" a href="style.css">
+</head>
+<body>
+     <!--Top of the page-->
+    <div class="flex-container-top">
+        <div class="top-left"></div>
+        <div class="top-mid-left"><h3>Header Logo</h3></div>
+        <div class="top-mid-right">
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
+    </div>
+    <!--Middle of the page-->
+    <div class="flex-container-mid">
+        <div class="mid-left"></div>
+        <div class="mid-mid-left"><h1>This website is <br> awesome</h1><p>This websites will be completed later on for now i am just practicing :)</p> <button class="button">Sign up</button> </div>
+        <div class="mid-mid-right">Place holder for a image</div>
+        <div class="mid-right"></div> 
+    </div>
+    <div class="info-header">
+        <h2> Some random information</h2>
+    </div>
+    <!--Some imformations section-->
+    <div class="information">
+        <div class="one"></div>
+        <div class="two"></div>
+        <div class="three"></div>
+        <div class="four"></div>
+    </div>
+    <div class="text">
+        <div class="t1">subtext under image</div>
+        <div class="t2">subtext under image</div>
+        <div class="t3">subtext under image</div>
+        <div class="f4">subtext under image</div>
+    </div>
+    <!--Quote sections-->
+    <div class="quote">
+        <div class="message">This is an inspiring quote, or a testemonial from a customer. Maybe its just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice. <br> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; -Thor, God of thunder</div>
+    </div>
+    <div class="signup">
+        <div class="sign-up"><h4>Call to auction! its time! <br> Sign up for our product by clicking that button right ovet there! &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; <button class="button2">Sign up</button>  </h4></div>
+    </div>
+    <div class="copyright">
+        <div class="copyright">This site was made by Leon Erdesi</div>
+    </div>
+</body>
+</html>
